// Vitest Snapshot v1

exports[`#Page > initialize and build 1`] = `
{
  "allRequests": [
    {
      "permalink": "/arkansas/ash-flat-nursing-homes/",
      "random": 94,
      "route": "cityNursingHomes",
      "slug": "ash-flat",
      "state": {
        "id": 6,
        "slug": "arkansas",
      },
      "type": "build",
    },
    {
      "permalink": "/alabama/albertville-nursing-homes/",
      "random": 33,
      "route": "cityNursingHomes",
      "slug": "albertville",
      "state": {
        "id": 4,
        "slug": "alabama",
      },
      "type": "build",
    },
  ],
  "beforeHydrateStack": [],
  "bodyAttributesStack": [],
  "bodyAttributesString": "",
  "componentsToHydrate": [],
  "cssStack": [],
  "cssString": "",
  "customJsStack": [],
  "data": {},
  "errors": [],
  "footerStack": [],
  "footerString": "",
  "head": "",
  "headStack": [],
  "headString": "",
  "helpers": {
    "metersInAMile": 0.00062137119224,
    "permalinks": {},
  },
  "htmlAttributesStack": [],
  "htmlAttributesString": "",
  "htmlString": "",
  "hydrateStack": [],
  "moduleJsStack": [],
  "moduleStack": [],
  "next": [Function],
  "perf": {
    "end": [Function],
    "prefix": [Function],
    "start": [Function],
    "stop": [Function],
    "timings": [],
  },
  "processStack": [Function],
  "query": {
    "db": {
      "cnString": {
        "connectionString": "postgresql://user:user@localhost:5099/db",
      },
      "db": {},
      "pool": {
        "_clients": [],
        "_events": {},
        "_eventsCount": 0,
        "_idle": [],
        "_pendingQueue": [],
        "ended": false,
        "ending": false,
        "options": {
          "connectionString": "postgresql://user:user@localhost:5099/db",
          "idleTimeoutMillis": 10000,
          "max": 10,
        },
      },
    },
  },
  "request": {
    "permalink": "/arkansas/ash-flat-nursing-homes/",
    "random": 94,
    "route": "cityNursingHomes",
    "slug": "ash-flat",
    "state": {
      "id": 6,
      "slug": "arkansas",
    },
    "type": "build",
  },
  "resNext": [Function],
  "route": {
    "$$meta": {
      "addedBy": "routejs",
      "type": "route",
    },
    "data": [Function],
    "hooks": [],
    "layout": "Layout.svelte",
    "layoutComponent": [Function],
    "parent": "home",
    "template": "Content.svelte",
    "templateComponent": [Function],
  },
  "routes": {
    "content": {
      "$$meta": {
        "addedBy": "routejs",
        "type": "route",
      },
      "hooks": [],
      "template": "Content.svelte",
    },
    "home": {
      "$$meta": {
        "addedBy": "routejs",
        "type": "route",
      },
      "hooks": [
        {
          "description": "Adds test to data object",
          "hook": "data",
          "name": "testToData",
          "priority": 50,
        },
      ],
      "template": "Home.svelte",
    },
  },
  "runHook": [Function],
  "settings": {
    "$$internal": {
      "distElder": "test/_elderjs",
      "hashedComponents": {
        "AutoComplete": "entryAutoComplete",
        "Footer": "entryFooter",
        "Header": "entryHeader",
        "HeaderAutoComplete": "entryHeaderAutoComplete",
        "Home": "entryHomeAutoComplete",
        "HomeAutoComplete": "entryHomeAutoComplete",
        "Modal": "entryModal",
      },
    },
    "build": {
      "numberOfWorkers": -1,
      "shuffleRequests": false,
    },
    "cacheBustingId": "XmjyWGYZtV",
    "debug": {
      "automagic": false,
      "build": false,
      "hooks": true,
      "performance": false,
      "stacks": false,
    },
    "distDir": "test",
    "hooks": {
      "disable": [],
    },
    "locations": {
      "assets": "./public/dist/static/",
      "buildFolder": "",
      "intersectionObserverPoly": "/dist/static/intersection-observer.js",
      "public": "./public/",
      "srcFolder": "./src/",
      "svelte": {
        "clientComponents": "./public/dist/svelte/",
        "ssrComponents": "./___ELDER___/compiled/",
      },
    },
    "plugins": {
      "elder-plugin-upload-s3": {
        "dataBucket": "elderguide.com",
        "deployId": "11111111",
        "htmlBucket": "elderguide.com",
      },
    },
    "props": {},
    "server": false,
    "typescript": false,
    "worker": true,
  },
  "shortcodes": [],
  "shouldSkipRequest": false,
  "styleTag": "",
  "svelteCss": [],
  "timings": [],
  "uid": "xxxxxxxxxx",
}
`;

exports[`#Page > initialize and build 2`] = `
{
  "allRequests": [
    {
      "permalink": "/arkansas/ash-flat-nursing-homes/",
      "random": 94,
      "route": "cityNursingHomes",
      "slug": "ash-flat",
      "state": {
        "id": 6,
        "slug": "arkansas",
      },
      "type": "build",
    },
    {
      "permalink": "/alabama/albertville-nursing-homes/",
      "random": 33,
      "route": "cityNursingHomes",
      "slug": "albertville",
      "state": {
        "id": 4,
        "slug": "alabama",
      },
      "type": "build",
    },
  ],
  "beforeHydrateStack": [],
  "bodyAttributesStack": [],
  "bodyAttributesString": "",
  "componentsToHydrate": [],
  "cssStack": [],
  "cssString": "cssStack",
  "customJsStack": [
    "customJsStack",
  ],
  "data": {
    "worldPopulation": 7805564950,
  },
  "errors": [],
  "footerStack": [
    "footerStack",
  ],
  "footerString": "
    beforeHydrateStack
    hydrateStack
    customJsStack
    footerStack
    ",
  "head": "headStack",
  "headStack": [],
  "headString": "headStack<style>cssStack</style>",
  "helpers": {
    "metersInAMile": 0.00062137119224,
    "permalinks": {},
  },
  "htmlAttributesStack": [],
  "htmlAttributesString": "",
  "htmlString": "",
  "hydrateStack": [
    "hydrateStack",
  ],
  "layoutHtml": "<div class=\\"container\\"></div>",
  "moduleJsStack": [],
  "moduleStack": [],
  "next": [Function],
  "perf": {
    "end": [Function],
    "prefix": [Function],
    "start": [Function],
    "stop": [Function],
    "timings": [],
  },
  "processStack": [Function],
  "query": {
    "db": {
      "cnString": {
        "connectionString": "postgresql://user:user@localhost:5099/db",
      },
      "db": {},
      "pool": {
        "_clients": [],
        "_events": {},
        "_eventsCount": 0,
        "_idle": [],
        "_pendingQueue": [],
        "ended": false,
        "ending": false,
        "options": {
          "connectionString": "postgresql://user:user@localhost:5099/db",
          "idleTimeoutMillis": 10000,
          "max": 10,
        },
      },
    },
  },
  "request": {
    "permalink": "/arkansas/ash-flat-nursing-homes/",
    "random": 94,
    "route": "cityNursingHomes",
    "slug": "ash-flat",
    "state": {
      "id": 6,
      "slug": "arkansas",
    },
    "type": "build",
  },
  "resNext": [Function],
  "route": {
    "$$meta": {
      "addedBy": "routejs",
      "type": "route",
    },
    "data": [Function],
    "hooks": [],
    "layout": "Layout.svelte",
    "layoutComponent": [Function],
    "parent": "home",
    "template": "Content.svelte",
    "templateComponent": [Function],
  },
  "routes": {
    "content": {
      "$$meta": {
        "addedBy": "routejs",
        "type": "route",
      },
      "hooks": [],
      "template": "Content.svelte",
    },
    "home": {
      "$$meta": {
        "addedBy": "routejs",
        "type": "route",
      },
      "hooks": [
        {
          "description": "Adds test to data object",
          "hook": "data",
          "name": "testToData",
          "priority": 50,
        },
      ],
      "template": "Home.svelte",
    },
  },
  "runHook": [Function],
  "settings": {
    "$$internal": {
      "distElder": "test/_elderjs",
      "hashedComponents": {
        "AutoComplete": "entryAutoComplete",
        "Footer": "entryFooter",
        "Header": "entryHeader",
        "HeaderAutoComplete": "entryHeaderAutoComplete",
        "Home": "entryHomeAutoComplete",
        "HomeAutoComplete": "entryHomeAutoComplete",
        "Modal": "entryModal",
      },
    },
    "build": {
      "numberOfWorkers": -1,
      "shuffleRequests": false,
    },
    "cacheBustingId": "XmjyWGYZtV",
    "debug": {
      "automagic": false,
      "build": false,
      "hooks": true,
      "performance": false,
      "stacks": false,
    },
    "distDir": "test",
    "hooks": {
      "disable": [],
    },
    "locations": {
      "assets": "./public/dist/static/",
      "buildFolder": "",
      "intersectionObserverPoly": "/dist/static/intersection-observer.js",
      "public": "./public/",
      "srcFolder": "./src/",
      "svelte": {
        "clientComponents": "./public/dist/svelte/",
        "ssrComponents": "./___ELDER___/compiled/",
      },
    },
    "plugins": {
      "elder-plugin-upload-s3": {
        "dataBucket": "elderguide.com",
        "deployId": "11111111",
        "htmlBucket": "elderguide.com",
      },
    },
    "props": {},
    "server": false,
    "typescript": false,
    "worker": true,
  },
  "shortcodes": [],
  "shouldSkipRequest": false,
  "styleTag": "<style>cssStack</style>",
  "svelteCss": [],
  "templateHtml": undefined,
  "timings": [],
  "uid": "xxxxxxxxxx",
}
`;

exports[`#Page initialize and build 1`] = `
Object {
  "allRequests": Array [
    Object {
      "permalink": "/arkansas/ash-flat-nursing-homes/",
      "random": 94,
      "route": "cityNursingHomes",
      "slug": "ash-flat",
      "state": Object {
        "id": 6,
        "slug": "arkansas",
      },
      "type": "build",
    },
    Object {
      "permalink": "/alabama/albertville-nursing-homes/",
      "random": 33,
      "route": "cityNursingHomes",
      "slug": "albertville",
      "state": Object {
        "id": 4,
        "slug": "alabama",
      },
      "type": "build",
    },
  ],
  "beforeHydrateStack": Array [],
  "bodyAttributesStack": Array [],
  "bodyAttributesString": "",
  "componentsToHydrate": Array [],
  "cssStack": Array [],
  "cssString": "",
  "customJsStack": Array [],
  "data": Object {},
  "errors": Array [],
  "footerStack": Array [],
  "headStack": Array [],
  "helpers": Object {
    "metersInAMile": 0.00062137119224,
    "permalinks": Object {},
  },
  "htmlAttributesStack": Array [],
  "htmlAttributesString": "",
  "htmlString": "",
  "hydrateStack": Array [],
  "moduleJsStack": Array [],
  "moduleStack": Array [],
  "next": [Function],
  "perf": Object {
    "end": [MockFunction] {
      "calls": Array [
        Array [
          "constructor",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "prefix": [MockFunction],
    "start": [MockFunction] {
      "calls": Array [
        Array [
          "page",
        ],
        Array [
          "constructor",
        ],
        Array [
          "initToBuildGap",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "stop": [MockFunction],
    "timings": Array [],
  },
  "processStack": [Function],
  "query": Object {
    "db": Object {
      "cnString": Object {
        "connectionString": "postgresql://user:user@localhost:5099/db",
      },
      "db": Object {},
      "pool": Object {
        "_clients": Array [],
        "_events": Object {},
        "_eventsCount": 0,
        "_idle": Array [],
        "_pendingQueue": Array [],
        "ended": false,
        "ending": false,
        "options": Object {
          "connectionString": "postgresql://user:user@localhost:5099/db",
          "idleTimeoutMillis": 10000,
          "max": 10,
        },
      },
    },
  },
  "request": Object {
    "permalink": "/arkansas/ash-flat-nursing-homes/",
    "random": 94,
    "route": "cityNursingHomes",
    "slug": "ash-flat",
    "state": Object {
      "id": 6,
      "slug": "arkansas",
    },
    "type": "build",
  },
  "resNext": [Function],
  "route": Object {
    "$$meta": Object {
      "addedBy": "routejs",
      "type": "route",
    },
    "data": [Function],
    "hooks": Array [],
    "layout": "Layout.svelte",
    "layoutComponent": [MockFunction],
    "parent": "home",
    "template": "Content.svelte",
    "templateComponent": [MockFunction],
  },
  "routes": Object {
    "content": Object {
      "$$meta": Object {
        "addedBy": "routejs",
        "type": "route",
      },
      "hooks": Array [],
      "template": "Content.svelte",
    },
    "home": Object {
      "$$meta": Object {
        "addedBy": "routejs",
        "type": "route",
      },
      "hooks": Array [
        Object {
          "description": "Adds test to data object",
          "hook": "data",
          "name": "testToData",
          "priority": 50,
        },
      ],
      "template": "Home.svelte",
    },
  },
  "runHook": [Function],
  "settings": Object {
    "$$internal": Object {
      "distElder": "test/_elderjs",
      "hashedComponents": Object {
        "AutoComplete": "entryAutoComplete",
        "Footer": "entryFooter",
        "Header": "entryHeader",
        "HeaderAutoComplete": "entryHeaderAutoComplete",
        "Home": "entryHomeAutoComplete",
        "HomeAutoComplete": "entryHomeAutoComplete",
        "Modal": "entryModal",
      },
    },
    "build": Object {
      "numberOfWorkers": -1,
      "shuffleRequests": false,
    },
    "cacheBustingId": "XmjyWGYZtV",
    "debug": Object {
      "automagic": false,
      "build": false,
      "hooks": true,
      "performance": false,
      "stacks": false,
    },
    "distDir": "test",
    "hooks": Object {
      "disable": Array [],
    },
    "locations": Object {
      "assets": "./public/dist/static/",
      "buildFolder": "",
      "intersectionObserverPoly": "/dist/static/intersection-observer.js",
      "public": "./public/",
      "srcFolder": "./src/",
      "svelte": Object {
        "clientComponents": "./public/dist/svelte/",
        "ssrComponents": "./___ELDER___/compiled/",
      },
    },
    "plugins": Object {
      "elder-plugin-upload-s3": Object {
        "dataBucket": "elderguide.com",
        "deployId": "11111111",
        "htmlBucket": "elderguide.com",
      },
    },
    "props": Object {},
    "server": false,
    "typescript": false,
    "worker": true,
  },
  "shortcodes": Array [],
  "shouldSkipRequest": false,
  "svelteCss": Array [],
  "uid": "xxxxxxxxxx",
}
`;

exports[`#Page initialize and build 2`] = `
Object {
  "allRequests": Array [
    Object {
      "permalink": "/arkansas/ash-flat-nursing-homes/",
      "random": 94,
      "route": "cityNursingHomes",
      "slug": "ash-flat",
      "state": Object {
        "id": 6,
        "slug": "arkansas",
      },
      "type": "build",
    },
    Object {
      "permalink": "/alabama/albertville-nursing-homes/",
      "random": 33,
      "route": "cityNursingHomes",
      "slug": "albertville",
      "state": Object {
        "id": 4,
        "slug": "alabama",
      },
      "type": "build",
    },
  ],
  "beforeHydrateStack": Array [],
  "bodyAttributesStack": Array [],
  "bodyAttributesString": "",
  "componentsToHydrate": Array [],
  "cssStack": Array [],
  "cssString": "cssStack",
  "customJsStack": Array [
    "customJsStack",
  ],
  "data": Object {
    "worldPopulation": 7805564950,
  },
  "errors": Array [],
  "footerStack": Array [
    "footerStack",
  ],
  "footerString": "
    beforeHydrateStack
    hydrateStack
    customJsStack
    footerStack
    ",
  "head": "headStack",
  "headStack": Array [],
  "headString": "headStack<style>cssStack</style>",
  "helpers": Object {
    "metersInAMile": 0.00062137119224,
    "permalinks": Object {},
  },
  "htmlAttributesStack": Array [],
  "htmlAttributesString": "",
  "htmlString": "",
  "hydrateStack": Array [
    "hydrateStack",
  ],
  "layoutHtml": "<div class=\\"container\\"></div>",
  "moduleJsStack": Array [],
  "moduleStack": Array [],
  "next": [Function],
  "perf": Object {
    "end": [MockFunction] {
      "calls": Array [
        Array [
          "constructor",
        ],
        Array [
          "initToBuildGap",
        ],
        Array [
          "data",
        ],
        Array [
          "html.template",
        ],
        Array [
          "html.layout",
        ],
        Array [
          "page",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "prefix": [MockFunction] {
      "calls": Array [
        Array [
          "data",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "start": [MockFunction] {
      "calls": Array [
        Array [
          "page",
        ],
        Array [
          "constructor",
        ],
        Array [
          "initToBuildGap",
        ],
        Array [
          "data",
        ],
        Array [
          "html.template",
        ],
        Array [
          "html.layout",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "stop": [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "timings": Array [],
  },
  "processStack": [Function],
  "query": Object {
    "db": Object {
      "cnString": Object {
        "connectionString": "postgresql://user:user@localhost:5099/db",
      },
      "db": Object {},
      "pool": Object {
        "_clients": Array [],
        "_events": Object {},
        "_eventsCount": 0,
        "_idle": Array [],
        "_pendingQueue": Array [],
        "ended": false,
        "ending": false,
        "options": Object {
          "connectionString": "postgresql://user:user@localhost:5099/db",
          "idleTimeoutMillis": 10000,
          "max": 10,
        },
      },
    },
  },
  "request": Object {
    "permalink": "/arkansas/ash-flat-nursing-homes/",
    "random": 94,
    "route": "cityNursingHomes",
    "slug": "ash-flat",
    "state": Object {
      "id": 6,
      "slug": "arkansas",
    },
    "type": "build",
  },
  "resNext": [Function],
  "route": Object {
    "$$meta": Object {
      "addedBy": "routejs",
      "type": "route",
    },
    "data": [Function],
    "hooks": Array [],
    "layout": "Layout.svelte",
    "layoutComponent": [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "page": Page {
              "allRequests": Array [
                Object {
                  "permalink": "/arkansas/ash-flat-nursing-homes/",
                  "random": 94,
                  "route": "cityNursingHomes",
                  "slug": "ash-flat",
                  "state": Object {
                    "id": 6,
                    "slug": "arkansas",
                  },
                  "type": "build",
                },
                Object {
                  "permalink": "/alabama/albertville-nursing-homes/",
                  "random": 33,
                  "route": "cityNursingHomes",
                  "slug": "albertville",
                  "state": Object {
                    "id": 4,
                    "slug": "alabama",
                  },
                  "type": "build",
                },
              ],
              "beforeHydrateStack": Array [],
              "bodyAttributesStack": Array [],
              "bodyAttributesString": "",
              "componentsToHydrate": Array [],
              "cssStack": Array [],
              "cssString": "cssStack",
              "customJsStack": Array [
                "customJsStack",
              ],
              "data": Object {
                "worldPopulation": 7805564950,
              },
              "errors": Array [],
              "footerStack": Array [
                "footerStack",
              ],
              "footerString": "
    beforeHydrateStack
    hydrateStack
    customJsStack
    footerStack
    ",
              "head": "headStack",
              "headStack": Array [],
              "headString": "headStack<style>cssStack</style>",
              "helpers": Object {
                "metersInAMile": 0.00062137119224,
                "permalinks": Object {},
              },
              "htmlAttributesStack": Array [],
              "htmlAttributesString": "",
              "htmlString": "",
              "hydrateStack": Array [
                "hydrateStack",
              ],
              "layoutHtml": "<div class=\\"container\\"></div>",
              "moduleJsStack": Array [],
              "moduleStack": Array [],
              "next": [Function],
              "perf": Object {
                "end": [MockFunction] {
                  "calls": Array [
                    Array [
                      "constructor",
                    ],
                    Array [
                      "initToBuildGap",
                    ],
                    Array [
                      "data",
                    ],
                    Array [
                      "html.template",
                    ],
                    Array [
                      "html.layout",
                    ],
                    Array [
                      "page",
                    ],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                  ],
                },
                "prefix": [MockFunction] {
                  "calls": Array [
                    Array [
                      "data",
                    ],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                  ],
                },
                "start": [MockFunction] {
                  "calls": Array [
                    Array [
                      "page",
                    ],
                    Array [
                      "constructor",
                    ],
                    Array [
                      "initToBuildGap",
                    ],
                    Array [
                      "data",
                    ],
                    Array [
                      "html.template",
                    ],
                    Array [
                      "html.layout",
                    ],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                  ],
                },
                "stop": [MockFunction] {
                  "calls": Array [
                    Array [],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                  ],
                },
                "timings": Array [],
              },
              "processStack": [Function],
              "query": Object {
                "db": Object {
                  "cnString": Object {
                    "connectionString": "postgresql://user:user@localhost:5099/db",
                  },
                  "db": Object {},
                  "pool": Object {
                    "_clients": Array [],
                    "_events": Object {},
                    "_eventsCount": 0,
                    "_idle": Array [],
                    "_pendingQueue": Array [],
                    "ended": false,
                    "ending": false,
                    "options": Object {
                      "connectionString": "postgresql://user:user@localhost:5099/db",
                      "idleTimeoutMillis": 10000,
                      "max": 10,
                    },
                  },
                },
              },
              "request": Object {
                "permalink": "/arkansas/ash-flat-nursing-homes/",
                "random": 94,
                "route": "cityNursingHomes",
                "slug": "ash-flat",
                "state": Object {
                  "id": 6,
                  "slug": "arkansas",
                },
                "type": "build",
              },
              "resNext": [Function],
              "route": Object {
                "$$meta": Object {
                  "addedBy": "routejs",
                  "type": "route",
                },
                "data": [Function],
                "hooks": Array [],
                "layout": "Layout.svelte",
                "layoutComponent": [MockFunction] {
                  "calls": [Circular],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": "<div class=\\"container\\"></div>",
                    },
                  ],
                },
                "parent": "home",
                "template": "Content.svelte",
                "templateComponent": [MockFunction] {
                  "calls": Array [
                    Array [
                      Object {
                        "page": [Circular],
                        "props": Object {
                          "data": Object {
                            "worldPopulation": 7805564950,
                          },
                          "helpers": Object {
                            "metersInAMile": 0.00062137119224,
                            "permalinks": Object {},
                          },
                          "request": Object {
                            "permalink": "/arkansas/ash-flat-nursing-homes/",
                            "random": 94,
                            "route": "cityNursingHomes",
                            "slug": "ash-flat",
                            "state": Object {
                              "id": 6,
                              "slug": "arkansas",
                            },
                            "type": "build",
                          },
                          "settings": Object {
                            "$$internal": Object {
                              "distElder": "test/_elderjs",
                              "hashedComponents": Object {
                                "AutoComplete": "entryAutoComplete",
                                "Footer": "entryFooter",
                                "Header": "entryHeader",
                                "HeaderAutoComplete": "entryHeaderAutoComplete",
                                "Home": "entryHomeAutoComplete",
                                "HomeAutoComplete": "entryHomeAutoComplete",
                                "Modal": "entryModal",
                              },
                            },
                            "build": Object {
                              "numberOfWorkers": -1,
                              "shuffleRequests": false,
                            },
                            "cacheBustingId": "XmjyWGYZtV",
                            "debug": Object {
                              "automagic": false,
                              "build": false,
                              "hooks": true,
                              "performance": false,
                              "stacks": false,
                            },
                            "distDir": "test",
                            "hooks": Object {
                              "disable": Array [],
                            },
                            "locations": Object {
                              "assets": "./public/dist/static/",
                              "buildFolder": "",
                              "intersectionObserverPoly": "/dist/static/intersection-observer.js",
                              "public": "./public/",
                              "srcFolder": "./src/",
                              "svelte": Object {
                                "clientComponents": "./public/dist/svelte/",
                                "ssrComponents": "./___ELDER___/compiled/",
                              },
                            },
                            "plugins": Object {
                              "elder-plugin-upload-s3": Object {
                                "dataBucket": "elderguide.com",
                                "deployId": "11111111",
                                "htmlBucket": "elderguide.com",
                              },
                            },
                            "props": Object {},
                            "server": false,
                            "typescript": false,
                            "worker": true,
                          },
                        },
                      },
                    ],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                  ],
                },
              },
              "routes": Object {
                "content": Object {
                  "$$meta": Object {
                    "addedBy": "routejs",
                    "type": "route",
                  },
                  "hooks": Array [],
                  "template": "Content.svelte",
                },
                "home": Object {
                  "$$meta": Object {
                    "addedBy": "routejs",
                    "type": "route",
                  },
                  "hooks": Array [
                    Object {
                      "description": "Adds test to data object",
                      "hook": "data",
                      "name": "testToData",
                      "priority": 50,
                    },
                  ],
                  "template": "Home.svelte",
                },
              },
              "runHook": [Function],
              "settings": Object {
                "$$internal": Object {
                  "distElder": "test/_elderjs",
                  "hashedComponents": Object {
                    "AutoComplete": "entryAutoComplete",
                    "Footer": "entryFooter",
                    "Header": "entryHeader",
                    "HeaderAutoComplete": "entryHeaderAutoComplete",
                    "Home": "entryHomeAutoComplete",
                    "HomeAutoComplete": "entryHomeAutoComplete",
                    "Modal": "entryModal",
                  },
                },
                "build": Object {
                  "numberOfWorkers": -1,
                  "shuffleRequests": false,
                },
                "cacheBustingId": "XmjyWGYZtV",
                "debug": Object {
                  "automagic": false,
                  "build": false,
                  "hooks": true,
                  "performance": false,
                  "stacks": false,
                },
                "distDir": "test",
                "hooks": Object {
                  "disable": Array [],
                },
                "locations": Object {
                  "assets": "./public/dist/static/",
                  "buildFolder": "",
                  "intersectionObserverPoly": "/dist/static/intersection-observer.js",
                  "public": "./public/",
                  "srcFolder": "./src/",
                  "svelte": Object {
                    "clientComponents": "./public/dist/svelte/",
                    "ssrComponents": "./___ELDER___/compiled/",
                  },
                },
                "plugins": Object {
                  "elder-plugin-upload-s3": Object {
                    "dataBucket": "elderguide.com",
                    "deployId": "11111111",
                    "htmlBucket": "elderguide.com",
                  },
                },
                "props": Object {},
                "server": false,
                "typescript": false,
                "worker": true,
              },
              "shortcodes": Array [],
              "shouldSkipRequest": false,
              "styleTag": "<style>cssStack</style>",
              "svelteCss": Array [],
              "templateHtml": undefined,
              "timings": Array [],
              "uid": "xxxxxxxxxx",
            },
            "props": Object {
              "data": Object {
                "worldPopulation": 7805564950,
              },
              "helpers": Object {
                "metersInAMile": 0.00062137119224,
                "permalinks": Object {},
              },
              "request": Object {
                "permalink": "/arkansas/ash-flat-nursing-homes/",
                "random": 94,
                "route": "cityNursingHomes",
                "slug": "ash-flat",
                "state": Object {
                  "id": 6,
                  "slug": "arkansas",
                },
                "type": "build",
              },
              "settings": Object {
                "$$internal": Object {
                  "distElder": "test/_elderjs",
                  "hashedComponents": Object {
                    "AutoComplete": "entryAutoComplete",
                    "Footer": "entryFooter",
                    "Header": "entryHeader",
                    "HeaderAutoComplete": "entryHeaderAutoComplete",
                    "Home": "entryHomeAutoComplete",
                    "HomeAutoComplete": "entryHomeAutoComplete",
                    "Modal": "entryModal",
                  },
                },
                "build": Object {
                  "numberOfWorkers": -1,
                  "shuffleRequests": false,
                },
                "cacheBustingId": "XmjyWGYZtV",
                "debug": Object {
                  "automagic": false,
                  "build": false,
                  "hooks": true,
                  "performance": false,
                  "stacks": false,
                },
                "distDir": "test",
                "hooks": Object {
                  "disable": Array [],
                },
                "locations": Object {
                  "assets": "./public/dist/static/",
                  "buildFolder": "",
                  "intersectionObserverPoly": "/dist/static/intersection-observer.js",
                  "public": "./public/",
                  "srcFolder": "./src/",
                  "svelte": Object {
                    "clientComponents": "./public/dist/svelte/",
                    "ssrComponents": "./___ELDER___/compiled/",
                  },
                },
                "plugins": Object {
                  "elder-plugin-upload-s3": Object {
                    "dataBucket": "elderguide.com",
                    "deployId": "11111111",
                    "htmlBucket": "elderguide.com",
                  },
                },
                "props": Object {},
                "server": false,
                "typescript": false,
                "worker": true,
              },
              "templateHtml": undefined,
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": "<div class=\\"container\\"></div>",
        },
      ],
    },
    "parent": "home",
    "template": "Content.svelte",
    "templateComponent": [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "page": Page {
              "allRequests": Array [
                Object {
                  "permalink": "/arkansas/ash-flat-nursing-homes/",
                  "random": 94,
                  "route": "cityNursingHomes",
                  "slug": "ash-flat",
                  "state": Object {
                    "id": 6,
                    "slug": "arkansas",
                  },
                  "type": "build",
                },
                Object {
                  "permalink": "/alabama/albertville-nursing-homes/",
                  "random": 33,
                  "route": "cityNursingHomes",
                  "slug": "albertville",
                  "state": Object {
                    "id": 4,
                    "slug": "alabama",
                  },
                  "type": "build",
                },
              ],
              "beforeHydrateStack": Array [],
              "bodyAttributesStack": Array [],
              "bodyAttributesString": "",
              "componentsToHydrate": Array [],
              "cssStack": Array [],
              "cssString": "cssStack",
              "customJsStack": Array [
                "customJsStack",
              ],
              "data": Object {
                "worldPopulation": 7805564950,
              },
              "errors": Array [],
              "footerStack": Array [
                "footerStack",
              ],
              "footerString": "
    beforeHydrateStack
    hydrateStack
    customJsStack
    footerStack
    ",
              "head": "headStack",
              "headStack": Array [],
              "headString": "headStack<style>cssStack</style>",
              "helpers": Object {
                "metersInAMile": 0.00062137119224,
                "permalinks": Object {},
              },
              "htmlAttributesStack": Array [],
              "htmlAttributesString": "",
              "htmlString": "",
              "hydrateStack": Array [
                "hydrateStack",
              ],
              "layoutHtml": "<div class=\\"container\\"></div>",
              "moduleJsStack": Array [],
              "moduleStack": Array [],
              "next": [Function],
              "perf": Object {
                "end": [MockFunction] {
                  "calls": Array [
                    Array [
                      "constructor",
                    ],
                    Array [
                      "initToBuildGap",
                    ],
                    Array [
                      "data",
                    ],
                    Array [
                      "html.template",
                    ],
                    Array [
                      "html.layout",
                    ],
                    Array [
                      "page",
                    ],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                  ],
                },
                "prefix": [MockFunction] {
                  "calls": Array [
                    Array [
                      "data",
                    ],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                  ],
                },
                "start": [MockFunction] {
                  "calls": Array [
                    Array [
                      "page",
                    ],
                    Array [
                      "constructor",
                    ],
                    Array [
                      "initToBuildGap",
                    ],
                    Array [
                      "data",
                    ],
                    Array [
                      "html.template",
                    ],
                    Array [
                      "html.layout",
                    ],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                  ],
                },
                "stop": [MockFunction] {
                  "calls": Array [
                    Array [],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                  ],
                },
                "timings": Array [],
              },
              "processStack": [Function],
              "query": Object {
                "db": Object {
                  "cnString": Object {
                    "connectionString": "postgresql://user:user@localhost:5099/db",
                  },
                  "db": Object {},
                  "pool": Object {
                    "_clients": Array [],
                    "_events": Object {},
                    "_eventsCount": 0,
                    "_idle": Array [],
                    "_pendingQueue": Array [],
                    "ended": false,
                    "ending": false,
                    "options": Object {
                      "connectionString": "postgresql://user:user@localhost:5099/db",
                      "idleTimeoutMillis": 10000,
                      "max": 10,
                    },
                  },
                },
              },
              "request": Object {
                "permalink": "/arkansas/ash-flat-nursing-homes/",
                "random": 94,
                "route": "cityNursingHomes",
                "slug": "ash-flat",
                "state": Object {
                  "id": 6,
                  "slug": "arkansas",
                },
                "type": "build",
              },
              "resNext": [Function],
              "route": Object {
                "$$meta": Object {
                  "addedBy": "routejs",
                  "type": "route",
                },
                "data": [Function],
                "hooks": Array [],
                "layout": "Layout.svelte",
                "layoutComponent": [MockFunction] {
                  "calls": Array [
                    Array [
                      Object {
                        "page": [Circular],
                        "props": Object {
                          "data": Object {
                            "worldPopulation": 7805564950,
                          },
                          "helpers": Object {
                            "metersInAMile": 0.00062137119224,
                            "permalinks": Object {},
                          },
                          "request": Object {
                            "permalink": "/arkansas/ash-flat-nursing-homes/",
                            "random": 94,
                            "route": "cityNursingHomes",
                            "slug": "ash-flat",
                            "state": Object {
                              "id": 6,
                              "slug": "arkansas",
                            },
                            "type": "build",
                          },
                          "settings": Object {
                            "$$internal": Object {
                              "distElder": "test/_elderjs",
                              "hashedComponents": Object {
                                "AutoComplete": "entryAutoComplete",
                                "Footer": "entryFooter",
                                "Header": "entryHeader",
                                "HeaderAutoComplete": "entryHeaderAutoComplete",
                                "Home": "entryHomeAutoComplete",
                                "HomeAutoComplete": "entryHomeAutoComplete",
                                "Modal": "entryModal",
                              },
                            },
                            "build": Object {
                              "numberOfWorkers": -1,
                              "shuffleRequests": false,
                            },
                            "cacheBustingId": "XmjyWGYZtV",
                            "debug": Object {
                              "automagic": false,
                              "build": false,
                              "hooks": true,
                              "performance": false,
                              "stacks": false,
                            },
                            "distDir": "test",
                            "hooks": Object {
                              "disable": Array [],
                            },
                            "locations": Object {
                              "assets": "./public/dist/static/",
                              "buildFolder": "",
                              "intersectionObserverPoly": "/dist/static/intersection-observer.js",
                              "public": "./public/",
                              "srcFolder": "./src/",
                              "svelte": Object {
                                "clientComponents": "./public/dist/svelte/",
                                "ssrComponents": "./___ELDER___/compiled/",
                              },
                            },
                            "plugins": Object {
                              "elder-plugin-upload-s3": Object {
                                "dataBucket": "elderguide.com",
                                "deployId": "11111111",
                                "htmlBucket": "elderguide.com",
                              },
                            },
                            "props": Object {},
                            "server": false,
                            "typescript": false,
                            "worker": true,
                          },
                          "templateHtml": undefined,
                        },
                      },
                    ],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": "<div class=\\"container\\"></div>",
                    },
                  ],
                },
                "parent": "home",
                "template": "Content.svelte",
                "templateComponent": [MockFunction] {
                  "calls": [Circular],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": undefined,
                    },
                  ],
                },
              },
              "routes": Object {
                "content": Object {
                  "$$meta": Object {
                    "addedBy": "routejs",
                    "type": "route",
                  },
                  "hooks": Array [],
                  "template": "Content.svelte",
                },
                "home": Object {
                  "$$meta": Object {
                    "addedBy": "routejs",
                    "type": "route",
                  },
                  "hooks": Array [
                    Object {
                      "description": "Adds test to data object",
                      "hook": "data",
                      "name": "testToData",
                      "priority": 50,
                    },
                  ],
                  "template": "Home.svelte",
                },
              },
              "runHook": [Function],
              "settings": Object {
                "$$internal": Object {
                  "distElder": "test/_elderjs",
                  "hashedComponents": Object {
                    "AutoComplete": "entryAutoComplete",
                    "Footer": "entryFooter",
                    "Header": "entryHeader",
                    "HeaderAutoComplete": "entryHeaderAutoComplete",
                    "Home": "entryHomeAutoComplete",
                    "HomeAutoComplete": "entryHomeAutoComplete",
                    "Modal": "entryModal",
                  },
                },
                "build": Object {
                  "numberOfWorkers": -1,
                  "shuffleRequests": false,
                },
                "cacheBustingId": "XmjyWGYZtV",
                "debug": Object {
                  "automagic": false,
                  "build": false,
                  "hooks": true,
                  "performance": false,
                  "stacks": false,
                },
                "distDir": "test",
                "hooks": Object {
                  "disable": Array [],
                },
                "locations": Object {
                  "assets": "./public/dist/static/",
                  "buildFolder": "",
                  "intersectionObserverPoly": "/dist/static/intersection-observer.js",
                  "public": "./public/",
                  "srcFolder": "./src/",
                  "svelte": Object {
                    "clientComponents": "./public/dist/svelte/",
                    "ssrComponents": "./___ELDER___/compiled/",
                  },
                },
                "plugins": Object {
                  "elder-plugin-upload-s3": Object {
                    "dataBucket": "elderguide.com",
                    "deployId": "11111111",
                    "htmlBucket": "elderguide.com",
                  },
                },
                "props": Object {},
                "server": false,
                "typescript": false,
                "worker": true,
              },
              "shortcodes": Array [],
              "shouldSkipRequest": false,
              "styleTag": "<style>cssStack</style>",
              "svelteCss": Array [],
              "templateHtml": undefined,
              "timings": Array [],
              "uid": "xxxxxxxxxx",
            },
            "props": Object {
              "data": Object {
                "worldPopulation": 7805564950,
              },
              "helpers": Object {
                "metersInAMile": 0.00062137119224,
                "permalinks": Object {},
              },
              "request": Object {
                "permalink": "/arkansas/ash-flat-nursing-homes/",
                "random": 94,
                "route": "cityNursingHomes",
                "slug": "ash-flat",
                "state": Object {
                  "id": 6,
                  "slug": "arkansas",
                },
                "type": "build",
              },
              "settings": Object {
                "$$internal": Object {
                  "distElder": "test/_elderjs",
                  "hashedComponents": Object {
                    "AutoComplete": "entryAutoComplete",
                    "Footer": "entryFooter",
                    "Header": "entryHeader",
                    "HeaderAutoComplete": "entryHeaderAutoComplete",
                    "Home": "entryHomeAutoComplete",
                    "HomeAutoComplete": "entryHomeAutoComplete",
                    "Modal": "entryModal",
                  },
                },
                "build": Object {
                  "numberOfWorkers": -1,
                  "shuffleRequests": false,
                },
                "cacheBustingId": "XmjyWGYZtV",
                "debug": Object {
                  "automagic": false,
                  "build": false,
                  "hooks": true,
                  "performance": false,
                  "stacks": false,
                },
                "distDir": "test",
                "hooks": Object {
                  "disable": Array [],
                },
                "locations": Object {
                  "assets": "./public/dist/static/",
                  "buildFolder": "",
                  "intersectionObserverPoly": "/dist/static/intersection-observer.js",
                  "public": "./public/",
                  "srcFolder": "./src/",
                  "svelte": Object {
                    "clientComponents": "./public/dist/svelte/",
                    "ssrComponents": "./___ELDER___/compiled/",
                  },
                },
                "plugins": Object {
                  "elder-plugin-upload-s3": Object {
                    "dataBucket": "elderguide.com",
                    "deployId": "11111111",
                    "htmlBucket": "elderguide.com",
                  },
                },
                "props": Object {},
                "server": false,
                "typescript": false,
                "worker": true,
              },
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
  },
  "routes": Object {
    "content": Object {
      "$$meta": Object {
        "addedBy": "routejs",
        "type": "route",
      },
      "hooks": Array [],
      "template": "Content.svelte",
    },
    "home": Object {
      "$$meta": Object {
        "addedBy": "routejs",
        "type": "route",
      },
      "hooks": Array [
        Object {
          "description": "Adds test to data object",
          "hook": "data",
          "name": "testToData",
          "priority": 50,
        },
      ],
      "template": "Home.svelte",
    },
  },
  "runHook": [Function],
  "settings": Object {
    "$$internal": Object {
      "distElder": "test/_elderjs",
      "hashedComponents": Object {
        "AutoComplete": "entryAutoComplete",
        "Footer": "entryFooter",
        "Header": "entryHeader",
        "HeaderAutoComplete": "entryHeaderAutoComplete",
        "Home": "entryHomeAutoComplete",
        "HomeAutoComplete": "entryHomeAutoComplete",
        "Modal": "entryModal",
      },
    },
    "build": Object {
      "numberOfWorkers": -1,
      "shuffleRequests": false,
    },
    "cacheBustingId": "XmjyWGYZtV",
    "debug": Object {
      "automagic": false,
      "build": false,
      "hooks": true,
      "performance": false,
      "stacks": false,
    },
    "distDir": "test",
    "hooks": Object {
      "disable": Array [],
    },
    "locations": Object {
      "assets": "./public/dist/static/",
      "buildFolder": "",
      "intersectionObserverPoly": "/dist/static/intersection-observer.js",
      "public": "./public/",
      "srcFolder": "./src/",
      "svelte": Object {
        "clientComponents": "./public/dist/svelte/",
        "ssrComponents": "./___ELDER___/compiled/",
      },
    },
    "plugins": Object {
      "elder-plugin-upload-s3": Object {
        "dataBucket": "elderguide.com",
        "deployId": "11111111",
        "htmlBucket": "elderguide.com",
      },
    },
    "props": Object {},
    "server": false,
    "typescript": false,
    "worker": true,
  },
  "shortcodes": Array [],
  "shouldSkipRequest": false,
  "styleTag": "<style>cssStack</style>",
  "svelteCss": Array [],
  "templateHtml": undefined,
  "timings": Array [],
  "uid": "xxxxxxxxxx",
}
`;
